# GP5-amrex

./: CMakeLists.txt  Readme.md  init.cmake
pybind/: CMakeLists.txt  gp.cpp
python/: Untitled.ipynb  gp.py  gp_test.py  setup.py
python/.ipynb_checkpoints/: Untitled-checkpoint-checkpoint.ipynb
python/gp/: gp.py
python/test/: Backtrace.0  LHY.py  gp  gp_test.py
python/test/gauss/: field.yaml
python/test/gaussTest/: field.yaml
python/test/imag/: sim.yaml
python/test/imag/fields/phi_2/: field.yaml
python/test/imag/fields/phi_3/: field.yaml
python/test/imag/fields/phi_4/: field.yaml
python/test/imag/fields/phi_7/: field.yaml
python/test/imag/fields/phi_8/: field.yaml
python/test/imagOut/phi_1/: field.yaml
python/test/imagOut/phi_10/: field.yaml
python/test/imagOut/phi_11/: field.yaml
python/test/imagOut/phi_13/: field.yaml
python/test/imagOut/phi_5/: field.yaml
python/test/imagOut/phi_6/: field.yaml
python/test/imagOut/phi_9/: field.yaml
python/test/imagTime/: sim.yaml
python/test/imagTime/fields/phi_2/: field.yaml
python/test/imagTime/fields/phi_3/: field.yaml
python/test/imagTime/fields/phi_4/: field.yaml
python/test/imagTime/fields/phi_7/: field.yaml
python/test/imagTime/fields/phi_8/: field.yaml
python/test/init/: field.yaml
python/test/output/: sim.yaml
python/test/output/fields/phi_1/: field.yaml
python/test/output/fields/phi_2/: field.yaml
python/test/output/fields/phi_3/: field.yaml
python/test/output/fields/phi_4/: field.yaml
python/test/output/fields/phi_5/: field.yaml
python/test/output/fields/phi_6/: field.yaml
python/test/output/fields/phi_7/: field.yaml
python/test/output/fields/phi_8/: field.yaml
python/test/output/fields/phi_9/: field.yaml
python/test/output/phi_0/: field.yaml
python/test/realOut/phi_11/: field.yaml
python/test/realOut/phi_13/: field.yaml
python/test/realTime/: sim.yaml
python/test/realTime/fields/phi_1/: field.yaml
python/test/realTime/fields/phi_5/: field.yaml
python/test/realTime/fields/phi_6/: field.yaml
python/test/realTime/fields/phi_9/: field.yaml
python/test/result/: field.yaml
python/test/trappedVortex/: field.yaml
src/: AdvancePhiAllLevels.cpp  AmrCoreAdv.H  AmrCoreAdv.cpp  CMakeLists.txt  Kernels.H  gpLevel.cpp  gpLevel.h  main.cpp  mainAdvect.cpp  operators.cpp  operators.h  timeStepper.cpp  timeStepper.h
tst/: CMakeLists.txt  levels_test.cpp  main_test.cpp
